# 5G-NTN-Link-Adapation-Matlab

./: .gitignore  README.md  TX_noise_10min.py  TX_noise_chunked.py  TX_noise_efficient.py  TX_noise_final.py  TX_noise_improved.py  TX_noise_simple.py  TX_noise_streaming.py  TX_noise_ultra.py  process_ota_log.py  process_sched_mac_logs.py  process_sched_mac_logs_optimized.py  usrp_gain.sh
ML/: README.md  compare_baselines.py  compute_metrics.py  demo.py  eda_features.py  eval_violation_curves.py  evaluate_all.py  evaluate_xgb.py  export_lut.py  export_lut_empirical.py  featurize.py  filter_snr_cqi_lut.py  mcs_tables.py  plot_bler_vs_elevation.py  plot_threshold_sweep.py  plot_throughput_pareto.py  polynomial_models.py  pyproject.toml  recommend_mcs.py  train_mcs_elev_snrcqi.py  train_mcs_mono_xgb.py  train_xgb.py
ML/data/: download_dataverse.py  snr_cqi_lut_dense.csv  snr_cqi_lut_dense_lower.csv  snr_cqi_lut_empirical_tput.csv
ML/docs/: Evaluation_Guide.md  LUT_Catalog.md  LUTs.md  MCS_Methodology.md  Model_Methods_Summary.md  Results_Summary.md
ML/models/: metrics.json  model_meta.json
ML/models/mcs15_xgb/: model.json  (+1 more)
ML/models_balanced/: metrics.json  model_meta.json
ML/models_safe_mcs10/: metrics.json  model_meta.json
ML/models_safe_mcs10_nomono/: metrics.json  model_meta.json
ML/reports/: baseline_summary.json  eda_summary.json  metrics.json  metrics_prob.json  summary.json  summary.txt
ML/reports_balanced/: metrics.json
ML/reports_balanced_full/: metrics.json  metrics_prob.json  summary.json  summary.txt
ML/reports_safe_mcs10/: metrics.json
(+80 files in other folders)
