[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pooch>=1.8.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]
